--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.0.0",
     "react-redux": "^7.2.2",
